0.3 - Not Yet Release - Ryan J Ollos <ryan.j.ollos@gmail.com> - trunk
    
    * Eliminated need for manual install steps that required editing
      Trac source.    
    * #9872: Fixed traceback due to attempt to add to a non-existent
      data dictionary that is common for some requests.

2009-09-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* setup.py:
	  Bump version to 0.2 for 0.11 port
	* README:
	  Update notes on how to use it.
	* trackeywords/web_ui.py:
	  keywords fieldset was renamed to field-keywords
	* trackeywords/templates/keywords.cs (deleted):
	  Remove clearsilver template.
	* trackeywords/templates/keywords.html (added):
	  Replace with Genshi template.

2007-09-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* README:
	* setup.py:
	* trackeywords/web_ui.py:
	  Cleanup before moving it

2007-09-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* README:
	* trackeywords/templates/keywords.cs (addTag):
	* trackeywords/web_ui.py (TracKeywordsComponent):
	  Make keywords.cs insert its own field set, so it doesn't conflict
	  with the condfields plugin.
