@@ -1,5 +1,6 @@
 0.3 - Not Yet Release - Ryan J Ollos <ryan.j.ollos@gmail.com> - trunk
-    
+
+    * #8799: Keywords are added to the wiki edit page.
     * Eliminated need for manual install steps that required editing
       Trac source.    
     * #9872: Fixed traceback due to attempt to add to a non-existent
